<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="settingViewModel"
            type="com.hungmanhnguyen.android.audiorecorder.screen.settings.SettingsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.settings.SettingsFragment">

        <TextView
            android:id="@+id/settings_title"
            style="@style/textStyle"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/setting_menu"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_title"
            app:layout_constraintVertical_bias="0.00">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/codec_header"
                    style="@style/textStyle"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:text="@string/codec"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/amr_nb_btn"
                    style="@style/buttonStyle"
                    android:layout_marginTop="16dp"
                    android:text="@string/amr_nb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/codec_header" />

                <Button
                    android:id="@+id/pcm_btn"
                    style="@style/buttonStyle"
                    android:layout_marginStart="8dp"
                    android:text="@string/pcm"
                    app:layout_constraintBottom_toBottomOf="@+id/amr_nb_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/amr_nb_btn" />

                <Button
                    android:id="@+id/aac_btn"
                    style="@style/buttonStyle"
                    android:text="@string/aac"
                    app:layout_constraintBottom_toBottomOf="@+id/amr_nb_btn"
                    app:layout_constraintEnd_toStartOf="@+id/amr_nb_btn"
                    app:layout_constraintStart_toEndOf="@+id/pcm_btn"
                    app:layout_constraintTop_toTopOf="@+id/amr_nb_btn" />

                <Button
                    android:id="@+id/vorbis_btn"
                    style="@style/buttonStyle"
                    android:layout_width="88dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/vorbis"
                    app:layout_constraintBottom_toBottomOf="@+id/amr_nb_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/amr_nb_btn" />

                <Button
                    android:id="@+id/amr_wb_btn"
                    style="@style/buttonStyle"
                    android:text="@string/amr_wb"
                    app:layout_constraintBottom_toBottomOf="@+id/amr_nb_btn"
                    app:layout_constraintEnd_toStartOf="@+id/vorbis_btn"
                    app:layout_constraintStart_toEndOf="@+id/amr_nb_btn"
                    app:layout_constraintTop_toTopOf="@+id/amr_nb_btn" />

                <TextView
                    android:id="@+id/format_header"
                    style="@style/textStyle"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:text="@string/format"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/amr_nb_btn" />

                <TextView
                    android:id="@+id/codec_name"
                    style="@style/textStyle"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/m4a"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/format_header" />

                <Button
                    android:id="@+id/webm_btn"
                    style="@style/buttonStyle"
                    android:text="@string/webm"
                    android:layout_width="80dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/format_header" />

                <Button
                    android:id="@+id/ogg_btn"
                    style="@style/buttonStyle"
                    android:text="@string/ogg"
                    app:layout_constraintBottom_toBottomOf="@+id/webm_btn"
                    app:layout_constraintEnd_toStartOf="@+id/webm_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/webm_btn" />

                <Button
                    android:id="@+id/oga_btn"
                    style="@style/buttonStyle"
                    android:text="@string/oga"
                    app:layout_constraintBottom_toBottomOf="@+id/webm_btn"
                    app:layout_constraintStart_toEndOf="@+id/webm_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/webm_btn" />

                <TextView
                    android:id="@+id/sample_rate_header"
                    style="@style/textStyle"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:text="@string/sample_rate"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/codec_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>