<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ImageView
		android:id="@+id/list_image_view"
		android:layout_width="48dp"
		android:layout_height="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="16dp"
		android:contentDescription="@string/buttonImgDesc"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintDimensionRatio="1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_play_button" />

	<TextView
		android:id="@+id/list_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:ellipsize="end"
		android:fontFamily="@font/source_sans_pro_semibold"
		android:maxWidth="200dp"
		android:maxLines="1"
		android:text="@string/filename"
		android:textColor="@android:color/holo_blue_dark"
		android:textSize="16sp"
		app:layout_constraintStart_toEndOf="@+id/list_image_view"
		app:layout_constraintTop_toTopOf="@+id/list_image_view" />

	<TextView
		android:id="@+id/list_date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:fontFamily="@font/source_sans_pro"
		android:text="@string/dummy"
		app:layout_constraintBottom_toBottomOf="@+id/list_image_view"
		app:layout_constraintStart_toEndOf="@+id/list_image_view" />

	<ImageView
		android:id="@+id/delete_btn"
		android:layout_width="32dp"
		android:layout_height="0dp"
		android:layout_marginEnd="8dp"
		android:padding="4dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintDimensionRatio="1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@android:drawable/ic_delete" />

	<ImageView
		android:id="@+id/rename_btn"
		android:layout_width="32dp"
		android:layout_height="0dp"
		android:layout_marginEnd="8dp"
		android:padding="4dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintDimensionRatio="1"
		app:layout_constraintEnd_toStartOf="@id/delete_btn"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_rename_button" />

	<ImageView
		android:id="@+id/convert_btn"
		android:layout_width="32dp"
		android:layout_height="0dp"
		android:layout_marginEnd="8dp"
		android:padding="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintDimensionRatio="1"
		app:layout_constraintEnd_toStartOf="@id/rename_btn"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_convert_button" />
</androidx.constraintlayout.widget.ConstraintLayout>
