<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/player_bg"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/media_header_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/header_img"
                style="@style/playerSheet_textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:contentDescription="@string/buttonImgDesc"
                app:srcCompat="@android:drawable/stat_sys_headset" />

            <TextView
                android:id="@+id/header_title"
                style="@style/playerSheet_textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/media_player" />

            <TextView
                android:id="@+id/header_status"
                style="@style/playerSheet_textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="@string/not_playing"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            android:id="@+id/filename"
            style="@style/playerSheet_textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/filename"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/teal_200"
            android:contentDescription="@string/buttonImgDesc"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filename"
            app:srcCompat="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/rew_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:contentDescription="@string/buttonImgDesc"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toStartOf="@+id/play_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            app:srcCompat="@android:drawable/ic_media_rew" />

        <ImageButton
            android:id="@+id/fwd_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:contentDescription="@string/buttonImgDesc"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play_button"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            app:srcCompat="@android:drawable/ic_media_ff" />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>